--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
 
   <string name="date_time_combination_format">%1$s %2$s</string>
   <string name="solution_time_format">%1$02d:%2$02d:%3$02d</string>
+  <string name="login_failure_message">Unable to sign in with the provided credentials.</string>
+  <string name="sign_out_title">Sign out</string>
 
   <string-array name="emojis">
     <item>&#x1f600;</item> <!-- grinning face -->
